--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -1,6 +1,20 @@
 <!--pages/personal/personal.wxml-->
 <view class="contentcontainer">
-  <image src="/assets/b_index_unselected.png" bindtap="b_index" class="contentbutton" style="width: 100rpx; height: 100rpx; display: block; box-sizing: border-box"></image>
-  <image src="/assets/b_CAS_unselected.png" bindtap="b_CAS" class="contentbutton"></image>
+  <image
+    src="/assets/b_index_unselected.png"
+    bindtap="b_index"
+    class="contentbutton"
+    style="
+      width: 100rpx;
+      height: 100rpx;
+      display: block;
+      box-sizing: border-box;
+    "
+  ></image>
+  <image
+    src="/assets/b_CAS_unselected.png"
+    bindtap="b_CAS"
+    class="contentbutton"
+  ></image>
   <image src="/assets/b_personal_selected.png" class="contentbutton"></image>
 </view>
