--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -1,18 +1,18 @@
 /* pages/personal/personal.wxss */
-.contentcontainer{
+.contentcontainer {
   position: fixed;
   width: 100%;
-  height:65px;
+  height: 65px;
   padding: 10px 0px 0px 0px;
   bottom: 0px;
   box-shadow: 0 -10px 15px rgba(65, 65, 65, 0.3);
-  text-shadow: 0 1px 1px rgba(64,64,64,0.3);
+  text-shadow: 0 1px 1px rgba(64, 64, 64, 0.3);
   display: flex;
   justify-content: space-around;
   background-color: white;
-  z-index:1;
+  z-index: 1;
 }
-.contentbutton{
-  width:50px;
-  height:50px;
+.contentbutton {
+  width: 50px;
+  height: 50px;
 }
