--- a/app.wxss
+++ b/app.wxss
@@ -7,6 +7,10 @@ page {
   display: flex;
   align-items: center;
 }
+.horizontalcenter{
+  display: flex;
+  justify-content: center;
+}
 .maincontainer {
   position: absolute;
   padding: 15px 0px 15px 0px;
@@ -29,4 +33,24 @@ page {
 .paragraph{
   font-size: normal;
   font-weight:normal;
+}
+.contentcontainer {
+  position: fixed;
+  width: 100%;
+  height: 65px;
+  padding: 10px 0px 0px 0px;
+  bottom: 0px;
+  box-shadow: 0 -10px 15px rgba(65, 65, 65, 0.3);
+  text-shadow: 0 1px 1px rgba(64, 64, 64, 0.3);
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
+  z-index: 1;
+}
+.contentbutton {
+  width: 50px;
+  height: 50px;
+}
+.textcontainer {
+  width: 80%;
 }
