--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -41,7 +41,7 @@
           舒烨 - 20届C社社长
           陈思达 - 22届C社副社
           杨淏然 - 23届C社打工人
-          张弛 - 23届C社打工人
+          张驰 - 23届C社打工人
         </text>
         <view style="height: 15px"></view>
       </view>
