--- a/app.wxss
+++ b/app.wxss
@@ -29,6 +29,10 @@ page {
   font-size:x-large;
   font-weight: bolder;
 }
+.subtitle{
+  font-size:large;
+  font-weight: bold;
+}
 .paragraph{
   font-size: normal;
   font-weight:normal;
@@ -51,4 +55,10 @@ page {
 }
 .textcontainer {
   width: 80%;
+}
+.inputcontainer{
+  padding:5px 15px 5px 15px;
+  height:30px;
+  box-shadow: 0 1px 5px rgba(65, 65, 65, 0.1) inset;
+  border-radius: 15px;
 }
