--- a/pages/CAS/CAS.wxss
+++ b/pages/CAS/CAS.wxss
@@ -1,1 +1,46 @@
 /* pages/CAS/CAS.wxss */
+.addbutton{
+  width:75px;
+  height:25px;
+  border-radius: 12.5px;
+  background-color: rgba(0,0,0,0.1);
+}
+.delbutton{
+  position: relative;
+  right:-100%;
+  top:-30px;
+  width:25px;
+  height:25px;
+  border-radius: 12.5px;
+  background-color: rgba(0,0,0,0.1);
+}
+.darkmaincontainer{
+  position: fixed;
+  width:100%;
+  height:100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  display: flex;
+  justify-content: space-around;
+  opacity: 0;
+}
+.darkparagraphcontainer{
+  position:absolute;
+  width:90%;
+  left:5%;
+  bottom:50%;
+  border-radius: 15px;
+  padding: 15px 0px 15px 0px;
+  background-color: white;
+  box-shadow: 0 5px 15px rgba(65, 65, 65, 0.1);
+  display: flex;
+  justify-content: space-around;
+}
+.inputcontainer{
+  position: relative;
+  top:-15px;
+  padding:5px 15px 5px 15px;
+  height:30px;
+  box-shadow: 0 1px 5px rgba(65, 65, 65, 0.1) inset;
+  border-radius: 15px;
+}
