Fix a small format problem

--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -25,9 +25,9 @@
   <view style="height: 15px"></view>
   <view class="paragraphcontainer">
     <view class="textcontainer">
-      <text decode="true"> 姓名：{{realname}} </text>
-      <text decode="true"> 学号：{{schoolnumber}} </text>
-      <text decode="true"> 邮箱：{{emailaddress}} </text>
+      <text decode="true"> 姓名：{{realname}} \n</text>
+      <text decode="true"> 学号：{{schoolnumber}} \n</text>
+      <text decode="true"> 邮箱：{{emailaddress}}</text>
       <view style="height: 15px"></view>
       <view class="horizontalcenter">
         <button bindtap="b_changeinfo">更改个人信息</button>
